# E4projet

./: .gitignore  WORKSPACE_TRANSFER_GUIDE.md  ai-ros.py  carla-follow-ego.py
AI_Part/: requirements.txt
projection/: How to run (projection test).txt  default.rviz  projection_node.py
projection/OLD/: package.xml  package.xml.save
projection/OLD/projection/: projection_node.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/: README.md  ci-test-readme.md  dependency-management.md  script.sh  simulation_test.sh
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/: CarlaRosPublisher_GNSS_IMU_ODOMETY_images.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/src/: README.md
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/src/object_detection/: package.xml  setup.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/src/object_detection/launch/: object_detection_launch.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/src/object_detection/models/: experimental.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/src/object_detection/object_detection/: object_detection_node.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/autonomous-forklift-for-harbor/src/object_detection/utils/: plots.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_msgs/: CMakeLists.txt  package.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_msgs/action/: ComputeLocalPlan.action
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/: CMakeLists.txt  README.md  package.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/behavior_tree/plugins/action/: compute_local_plan.cpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/behavior_trees/: expleo_nav_stack_tree_nodes.xml  navigate_to_pose_w_replanning_and_recovery.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/include/behavior_tree/plugins/action/: compute_local_plan.hpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/include/expleo_nav_stack/: expleo_local_planner.hpp  expleo_planner_server.hpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/launch/: carla_bridge_bringup.launch.py  expleo_navstack_bringup.launch.py  expleo_navstack_navigation.launch.py  spawn_EV.launch.py  tb3_simulation_launch.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/params/: nav2_config_smac_hybrid__regulated_pure_pursuit__carla.yaml  nav2_config_smac_hybrid__regulated_pure_pursuit__carla_yolov7.yaml  nav2_params.yaml  tesla_with_sensors.json
projection/expleo_nav_stack_yolov7_improve_jazzy/src/expleo_nav_stack/src/: expleo_planner_server.cpp  main.cpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/local_planner_plugin/: CMakeLists.txt  local_planner_plugin.xml  package.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/local_planner_plugin/include/local_planner_plugin/: template_local_planner.hpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/local_planner_plugin/src/: template_local_planner.cpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/nav2_yolov7_plugin/: CMakeLists.txt  package.xml  yolov7_layer.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/nav2_yolov7_plugin/include/nav2_yolov7_plugin/: yolov7_layer.hpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/nav2_yolov7_plugin/src/: yolov7_layer.cpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/perception2d_interfaces/: CMakeLists.txt  README.md  package.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/perception2d_interfaces/msg/: DetectionBounds.msg  DetectionBoundsList.msg  DetectionList.msg
projection/expleo_nav_stack_yolov7_improve_jazzy/src/projection/: setup.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/projection/projection/: projection_node.py  projection_node_backup.py
projection/expleo_nav_stack_yolov7_improve_jazzy/src/twist_to_regulated_control/: CMakeLists.txt  Doxygen  package.xml
projection/expleo_nav_stack_yolov7_improve_jazzy/src/twist_to_regulated_control/include/carla_twist_to_regulated_control/: PIDController.hpp  TwistToRegulatedControl.hpp
projection/expleo_nav_stack_yolov7_improve_jazzy/src/twist_to_regulated_control/src/: PIDController.cpp  TwistToRegulatedControl.cpp  twist_to_regulated_control_node.cpp
projection/wsl-bridge/: clean.bash  wsl-bridge.py  说明.txt
setup/: 1.carla-bridge.sh  2.nav2.sh  3.AI_Part.sh  4.ai-ros.sh  5.RViz2.sh  6.carla-follow-ego.sh  RViz2.sh  ai-ros-check.sh  carla bridge.sh  carla-follow-ego.sh  nav2.sh  projection_node.sh
