<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>expleo_nav_stack</name>
  <version>0.0.0</version>
  <description>Custom planner server reimplementation for autonomous driving applications</description>
  <maintainer email="jude.jbara-chakhtoura@expleogroup.com">Jude Jbara Chakhtoura</maintainer>
  <maintainer email="thibaud.duhautbout@expleogroup.com">Thibaud Duhautbout</maintainer>
  <license>Expleo Internal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>expleo_nav_msgs</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>carla_ros_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
