<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_planner_plugin</name>
  <version>0.0.1</version>
  <description>Local planner demonstration plugin</description>
  <maintainer email="thibaud.duhautbout@expleogroup.com">tduhautbout</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>expleo_nav_stack</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <expleo_nav_stack plugin="${prefix}/local_planner_plugin.xml" />
  </export>
</package>
