<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_yolov7_plugin</name>
  <version>1.0.0</version>
  <description>Plugin for creating a 2D costmap from data obtained by yolov7</description>
  <maintainer email="paul.chretien@expleogroup.com">Paul Chretien</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>perception2d_interfaces</depend>
  <depend>nav_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <costmap_2d plugin="${prefix}/yolov7_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
