<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_twist_to_regulated_control</name>
  <version>0.0.1</version>
  <description>Convert twist messages to Carla control messages with regulation</description>
  <maintainer email="thibaud.duhautbout@expleogroup.com">tduhautbout</maintainer>
  <license>Expleo Group internal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>carla_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
</package>
